feat: Configuring the project

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "blog",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "db": "dotenv -e .env -- sequelize-cli db:create --config ./sequelizeConfig.js"
+  },
   "keywords": [],
   "author": "",
   "license": "MIT",
