--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "db": "dotenv -e .env -- sequelize-cli db:create --config ./sequelizeConfig.js"
+    "dev": "nodemon server.js",
+    "db": "dotenv -e .env -- sequelize-cli db:create --config ./sequelizeConfig.js",
+    "migrate": "dotenv -e .env -- sequelize-cli db:migrate --config ./sequelizeConfig.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
