--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon",
     "db": "dotenv -e .env -- sequelize-cli db:create --config ./sequelizeConfig.js",
     "migrate": "dotenv -e .env -- sequelize-cli db:migrate --config ./sequelizeConfig.js"
   },
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "ioredis": "^5.7.0",
